# lmir

./: CMakeLists.txt  README.adoc
cmake/: FetchLLVM.cmake
examples/: gelu.mlir
include/lmir/Conversion/LMIRToLinalg/: LMIRToLinalg.h
include/lmir/Dialect/LMIR/: CMakeLists.txt  LMIRDialect.h  LMIROps.h  LMIROps.td
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/LMIRToLinalg/: CMakeLists.txt  LMIRToLinalg.cpp
lib/Dialect/LMIR/: CMakeLists.txt  LMIRDialect.cpp  LMIROps.cpp
tools/: CMakeLists.txt  lmir-opt.cpp
